#265 image-alignment fixed

--- a/src/Components/Testimonials/Testimonial.css
+++ b/src/Components/Testimonials/Testimonial.css
@@ -76,28 +76,41 @@
   padding-bottom: 14px;
   flex-direction: column;
   border-radius: 8px;
+  
 }
 .carousel .card .img {
   background: #8b53ff;
   height: 148px;
   width: 148px;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.5rem;
 }
-.card .img img {
+
+.card .img img  {
   width: 140px;
   height: 140px;
   border-radius: 50%;
   object-fit: cover;
   border: 4px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0rem;
 }
+
 .carousel .card h2 {
   font-weight: 500;
   font-size: 1.56rem;
-  margin: 30px 0 5px;
+  margin: 20px 0 5px;
 }
 .carousel .card span {
   color: #6a6d78;
   font-size: 1.31rem;
+  text-align: center;
+  margin: 0 10px;
 }
 
 .text {
